# Open-env-final

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
data/: eval_scenarios.jsonl  pretrain_corpus.jsonl  pretrain_corpus_augmented.jsonl  sft_trajectories.jsonl  sft_trajectories_augmented.jsonl  targeted_data_report.json  targeted_pretrain_corpus.jsonl  targeted_sft_trajectories.jsonl
incident_commander_env/: __init__.py  agent_config.py  client.py  compat.py  demo_agents.py  dynamic_prompting.py  evaluation.py  execution_logging.py  external_tools.py  interactive_rl.py  judge.py  models.py  observability.py  rewards.py  scenarios.py
incident_commander_env/server/: app.py  incident_environment.py  mcp_environment.py
scripts/: evaluate_baseline.py  incident_complexity_report.py  interactive_rl_smoke.py  reward_hack_tester.py  run_demo.py
server/: Dockerfile  __init__.py  app.py  requirements.txt
tests/: test_environment.py  test_evaluation_harness.py  test_execution_logging.py  test_grpo_reward.py  test_incident_complexity.py  test_interactive_rl.py  test_reward_scale.py  test_targeted_data.py
training/: generate_targeted_data.py  prepare_data.py  run_hf_job.py  train_grpo.py  train_pretrain.py  train_sft.py
